# learning-hexagonal-arch

./: README.md  pyproject.toml  run.sh
src/: main.py
src/adapters/inbound/web_framework/fastapi/: dtos.py  main.py
src/adapters/inbound/web_framework/flask/: main.py
src/applications/: create_new_user.py
src/domains/: user.py
src/ports/: web_framework_port.py
