[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiple-language-hexagoanl-arch"
version = "0.1.0"
description = "Hexagonal architecture sample"
requires-python = ">=3.14"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
