[project]
name = "learning-hexagonal-arch"
version = "0.1.0"
description = "Example hexagonal architecture"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "codon-jit>=0.4.6",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
